# Pong

./: .gitignore  CMakeLists.txt  Game2D.cpp  Game2D.h  README.md  dirty_setup.cmd
EditorSrc/: EditorLayer.cpp  EditorLayer.h  TempestEditor.cpp
EngineSrc/Tempest/: CMakeLists.txt
EngineSrc/Tempest/Tempest/Audio/: OpenALSoundBuffer.cpp  SoundSource.cpp  SoundSource.h
EngineSrc/Tempest/Tempest/Core/: Application.cpp  Application.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h
EngineSrc/Tempest/Tempest/Entity/: BaseGameEntity.cpp  BaseGameEntity.h  MovingEntity.cpp  MovingEntity.h  SteeringBehavior.cpp  SteeringBehavior.h  Telegram.h
EngineSrc/Tempest/Tempest/ImGui/: ImGUILayer.cpp
EngineSrc/Tempest/Tempest/Platform/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLTexture.cpp  OpenGLTexture.h
EngineSrc/Tempest/Tempest/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
EngineSrc/Tempest/Tempest/PublicInclude/: Tempest.h
EngineSrc/Tempest/Tempest/Renderer/: Framebuffer.h  OrthoCameraController.cpp  OrthoCameraController.h  Renderer2D.cpp  Renderer2D.h  SubTexture2D.h  TextRenderer.cpp  TextRenderer.h  Texture.h
EngineSrc/Tempest/vender/glfw/: CMakeLists.txt
EngineSrc/Tempest/vender/imgui-OLD/: CMakeLists.txt  imgui.h
EngineSrc/Tempest/vender/libsndfile/: CMakeLists.txt
EngineSrc/Tempest/vender/libsndfile-1.0.31/: CMakeLists.txt
EngineSrc/Tempest/vender/openal-soft/: CMakeLists.txt
EngineSrc/Tempest/vender/openal-soft-1.21.1/: CMakeLists.txt
EngineSrc/Tempest/vender/rtaudio-5.1.0/: CMakeLists.txt
EngineSrc/Tempest/vender/spdlog/: CMakeLists.txt
EngineSrc/Tempest/vender/stb/: CMakeLists.txt  stb_rect_pack.cpp
GameSrc/: Animation.cpp  Animation.h  AudioTest.cpp  AudioTest.h  Background.cpp  Background.h  BaseEntity.cpp  BaseEntity.h  Colour.cpp  Colour.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Episode.cpp  Episode.h  Game.cpp  Game2D.cpp  Game2D.h  GameSession.h  GameState.cpp  GameState.h  Global.h  GlobalState.h  Image.cpp  Image.h  InfiniteState.cpp  InfiniteState.h  InitState.cpp  InitState.h  Level.cpp  Level.h  LevelGenerator.h  LevelTheme.cpp  LevelTheme.h  LoadingLayer.cpp  LoadingLayer.h  LoadingState.cpp  LoadingState.h  MainState.cpp  (+25 more)
GameSrc/Resources/Assets/: resources.xml
Resources/Assets/: mario.xml  music.xml  resources.xml  sounds.xml
WIPRigidBodyCode/: Vehicle.cpp
WIPRigidBodyCode/Entity/: BaseGameEntity.cpp  BaseGameEntity.h  GameWorld.cpp  GameWorld.h  RigidBody.cpp  RigidBody.h
